# 3d-graphics-template

./: .gitignore  CMakeLists.txt  README.md
Examples/01-HelloWorld/: CMakeLists.txt
Examples/02-Log/: CMakeLists.txt
Examples/02-Log/Source/: main.cpp
Examples/03-CreatingWindow/: CMakeLists.txt
Examples/03-CreatingWindow/Source/: main.cpp
SharedLib/: CMakeLists.txt
SharedLib/Source/SharedLib/Core/: Assert.h  Log.cpp  Log.h  Logger.cpp  Logger.h
SharedLib/Source/SharedLib/Platform/: Window.cpp  Window.h
SharedLib/Source/SharedLib/Platform/Windows/: Win32Window.cpp  Win32Window.h
